src/QStatusBar.h


// 
// This file has been automatically generated by RaQt_maker V0.0.6.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC void * QWQStatusBarCtor(void * parent);
EXTERNC void * SCWQStatusBarCtor(void * parent);
EXTERNC void QWQStatusBaraddWidget(void * obj, void * widget, int32_t  stretch);
EXTERNC int32_t QWQStatusBarinsertWidget(void * obj, int32_t  index, void * widget, int32_t  stretch);
EXTERNC void QWQStatusBaraddPermanentWidget(void * obj, void * widget, int32_t  stretch);
EXTERNC int32_t QWQStatusBarinsertPermanentWidget(void * obj, int32_t  index, void * widget, int32_t  stretch);
EXTERNC void QWQStatusBarremoveWidget(void * obj, void * widget);
EXTERNC void QWQStatusBarsetSizeGripEnabled(void * obj, int8_t  arg1);
EXTERNC int8_t QWQStatusBarisSizeGripEnabled(void * obj);
EXTERNC void QWQStatusBarcurrentMessage(void * retBuffer, void * obj);
EXTERNC void QWQStatusBarshowMessage(void * obj, char * text, int32_t  timeout);
EXTERNC void QWQStatusBarclearMessage(void * obj);
EXTERNC void QWvalidateCB_QStatusBar(void *obj, int32_t objId, char *methodName);
EXTERNC void QWQStatusBarDtor(void *);
EXTERNC void SCWQStatusBarDtor(void *);